<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main_navigation_notification"
            android:checked="true"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_main_notification" />
        <item
            android:id="@+id/menu_main_navigation_contact"
            android:checkable="false"
            android:icon="@drawable/ic_round_account_circle_24"
            android:title="@string/menu_main_contact" />
        <item
            android:id="@+id/menu_main_navigation_community"
            android:checkable="false"
            android:icon="@drawable/ic_baseline_sports_baseball_24"
            android:title="@string/community" />
        <item
            android:id="@+id/menu_main_navigation_request"
            android:checkable="false"
            android:icon="@drawable/ic_baseline_checklist_24"
            android:title="@string/request" />
    </group>

    <item android:title="@string/menu_main_other">
        <menu>
            <group android:id="@+id/menu_main_navigation_group_other">
                <item
                    android:id="@+id/menu_main_navigation_qrcode"
                    android:checkable="false"
                    android:icon="@drawable/ic_round_qr_code_24"
                    android:title="@string/scan_qr_code" />
                <item
                    android:id="@+id/menu_main_navigation_test"
                    android:checkable="false"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/menu_main_test" />
                <item
                    android:id="@+id/menu_main_navigation_share"
                    android:checkable="false"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/menu_main_share" />
                <item
                    android:id="@+id/menu_main_navigation_info"
                    android:checkable="false"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/menu_main_about_us" />
            </group>
        </menu>
    </item>

</menu>