<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:elevation="@dimen/margin_m"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <ImageButton
        android:id="@+id/emoji_scan"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_round"
        android:contentDescription="@string/emoji"
        android:src="@drawable/ic_round_insert_emoticon_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="no"
        android:background="@drawable/ripple_card_round"
        android:backgroundTint="@color/backgroundSecondary"
        android:hint="@string/hint_type_here"
        android:inputType="text"
        android:lines="1"
        android:paddingHorizontal="@dimen/margin_m"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textIsSelectable="true"
        android:textSize="@dimen/font_s"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emoji_scan"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <requestFocus />

    </EditText>

    <ImageButton
        android:id="@+id/clip"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/selector_round"
        android:contentDescription="@string/clip"
        android:src="@drawable/ic_baseline_clip_24"
        app:layout_constraintBottom_toBottomOf="@id/edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edittext" />

    <ImageButton
        android:id="@+id/send"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cd_send"
        android:src="@drawable/ic_round_send_24"
        android:text="@string/send"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edittext" />


</androidx.constraintlayout.widget.ConstraintLayout>

