<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    app:layoutDescription="@xml/activity_chat_scene"
    tools:context=".ui.chat.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_chat_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_chat_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_round_arrow_back_24">

            <ImageView
                android:id="@+id/head_picture"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/selector_round_color"
                android:contentDescription="@string/cd_headView" />

            <TextSwitcher
                android:id="@+id/text_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="@dimen/margin_l" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_chat_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_chat"
        android:overScrollMode="never"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@android:color/transparent"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@android:color/transparent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_chat_app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:elevation="@dimen/margin_m"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/emoji_scan"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_round"
            android:contentDescription="@string/emoji"
            android:src="@drawable/ic_round_insert_emoticon_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="no"
            android:background="@drawable/ripple_card_round"
            android:backgroundTint="@color/backgroundSecondary"
            android:hint="@string/hint_type_here"
            android:inputType="text"
            android:lines="1"
            android:paddingHorizontal="@dimen/margin_m"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textIsSelectable="true"
            android:textSize="@dimen/font_s"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emoji_scan"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/clip"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selector_round"
            android:contentDescription="@string/clip"
            android:src="@drawable/ic_baseline_clip_24"
            app:layout_constraintBottom_toBottomOf="@id/edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edittext" />

        <ImageButton
            android:id="@+id/send"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selector_round"
            android:contentDescription="@string/cd_send"
            android:src="@drawable/ic_round_send_24"
            android:text="@string/send"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edittext" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_list"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/background"
        android:elevation="@dimen/margin_m"
        android:overScrollMode="never"
        android:paddingTop="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/emoji_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:elevation="@dimen/margin_m"
        android:overScrollMode="never"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />

</androidx.constraintlayout.motion.widget.MotionLayout>